Pre-1.0 semantic analysis: fix findings, harden CI (#365)
## Summary

- Semantic code analysis of all production code (oauth-sheriff-core +
oauth-sheriff-quarkus)
- Fixed 18 verified findings across Critical/High/Medium/Low severity
- Fixed all SonarCloud issues (0 bugs, 0 vulnerabilities, 0 code smells,
88% new code coverage)
- Fixed CI integration test infrastructure (Zitadel JWKS, Maven cache,
startup script)

### Critical fixes
- Cache expiration now respects clock skew tolerance (max across
issuers)
- `TokenValidator.close()` shuts down cache eviction executor (prevents
thread leak)
- CDI `SecurityEventCounter` bean connected to actual validator instance

### High fixes
- `expectedTokenType` documented as opt-in with security advisory
(design decision)
- Deleted dead `InternalCacheException` class
- Removed dead JWE `DEFAULT_KEY_ID` read in single-key path
- Removed redundant Lombok getters from `AccessTokenCacheConfig`

### Medium/Low fixes
- Package-private `TokenValidatorMonitor.reset()` methods
- Removed redundant `ClaimName` getters, unused LogRecord constants,
test-only overloads
- `isCachingEnabled()` used consistently, missing-clientId log changed
to DEBUG
- `DecodedJwt` requires non-null body, `ValidationContext` 2-param
constructor removed
- Fixed ENABLED Javadoc default, simplified DevUI health info

### CI/Infrastructure
- Fixed Zitadel `EXTERNALPORT` mismatch (8080 vs 3080) causing JWKS key
not found
- Fixed stale Maven cache causing native image to use old defaults
- Startup script: token validation moved to integration tests, JWKS race
resolved
- DPoP fail-closed when required but request context missing (Gemini
review fix)
- Safe URI parsing with `new URI()` instead of `URI.create()` (Gemini
review fix)

### Tests & Coverage
- Added DPoP htu/htm validation tests (7 tests)
- Added VertxServletObjectsResolver error path tests
- Added KeyProcessor RSA default algorithm test
- Converted ClientIpExtractor tests to parameterized
- 88% new code coverag